[package]
name = "deadlocked"
version = "4.0.1"
edition = "2021"

[dependencies]
bytemuck = "1.21"
eframe = { version = "0.30", default-features = false, features = [
    "wayland",
    "wgpu",
    "x11",
] }
env_logger = "0.11"
glam = { version = "0.29", features = ["bytemuck"] }
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
strip = "debuginfo"
