[package]
name = "deadlocked"
version = "4.2.0"
edition = "2021"

[dependencies]
bytemuck = "1.22"
eframe = { version = "0.31", default-features = false, features = [
    "wayland",
    "x11",
    "wgpu",
] }
env_logger = { version = "0.11", default-features = false }
glam = { version = "0.30", features = ["bytemuck"] }
libc = "0.2"
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
strip = "debuginfo"
